--- a/src/main/webapp/showSlownik.xhtml
+++ b/src/main/webapp/showSlownik.xhtml
@@ -8,6 +8,9 @@
 	<ui:define name="content">
 	
 		<h:form>
+		<h:commandLink action="addMiasto?faces-redirect=true">
+		<h:outputText value="Dodaj miasto" />
+		</h:commandLink>
 		<h:panelGrid columns="2">
 			<h:dataTable value="#{panstwoBean.panstwa}" var="item">
 				<f:facet name="header">Panstwa</f:facet>
@@ -22,6 +25,16 @@
 					<f:facet name="header">Nazwa</f:facet>
 					<h:outputText value="#{item.nazwa}" />
 				</h:column>
+				
+				<h:column>
+				<f:facet name="header">Usun</f:facet>
+				<h:commandLink value="Usuń miasto" action="#{miastoBean.deleteCity}"/>
+				</h:column>
+			
+			    <h:column>
+			    <f:facet name="header">Edytuj</f:facet>
+			    <h:commandLink value="Edytuj miasto" action="#{miastoBean.editMiasto}" /></h:column>
+				
 			</h:dataTable>
 			</h:panelGrid>
 		</h:form>
