--- a/src/main/webapp/home.xhtml
+++ b/src/main/webapp/home.xhtml
@@ -5,6 +5,16 @@
 	xmlns:h="http://java.sun.com/jsf/html"
 	template="/templates/default.xhtml">
 	<ui:define name="content">
-		<p>#{msg.applicationInfo}</p>
+<br>
+<h:commandButton image="/resources/img/accept-icon.png" action="addCar?faces-redirect=true" />
+</br>
+
+<br>
+<h:commandButton image="/resources/img/city-icon.png" action="addCar?faces-redirect=true" />
+</br>
+
+<br>
+<h:commandButton image="/resources/img/shopping-basket-add-icon.png" action="addCar?faces-redirect=true" />
+</br>
 	</ui:define>
 </ui:composition>
