--- a/src/main/webapp/showPersons.xhtml
+++ b/src/main/webapp/showPersons.xhtml
@@ -27,6 +27,8 @@
 				</h:column>
 
 			</h:dataTable>
+			<h:commandButton image="/resources/img/User-Group-icon.png" action="addCar?faces-redirect=true" />
+	 
 		</h:form>
 
 	</ui:define>
