--- a/src/main/webapp/add.xhtml
+++ b/src/main/webapp/add.xhtml
@@ -18,7 +18,7 @@
 				<h:outputText value="#{msg.personPinLabel}" />
 				<h:inputText id="pin" value="#{personBean.person.pin}" />
 
-				<h:outputText value="Registration date" />
+				<h:outputText value=" Data rejestracji " />
 				<rich:calendar value="#{personBean.person.registrationDate}"
 					id="calendar" datePattern="dd.MM.yyyy" showApplyButton="#{true}"
 					style="width:200px">
